--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -21,3 +21,26 @@ $fa-font-path: "../webfonts";
   background-color: red;
   color: #fff;
 }
+
+@media print {
+  .nav.nav-tabs li:not(.active){
+    display: none;
+  }
+
+  .invoice {
+    padding: 10px 20px;
+  }
+
+  .invoice {
+    background-position: center center;
+    background-repeat: no-repeat;
+  }
+
+  .table-responsive table {
+    background-color: transparent !important;
+  }
+}
+
+@page {
+  margin: 0;
+}
